fixed-grip-background on mobile
fixed-grip-background on mobile so now only typography moves on scroll

--- a/css/master-styles-4.css
+++ b/css/master-styles-4.css
@@ -105,8 +105,9 @@ body::after {
 .footnotes {
   position: fixed;
   pointer-events: auto;
-  font-family: Arial, sans-serif;
+  font-family: Helvetica, sans-serif;
   font-weight: 100;
+  letter-spacing: .05em;
   top: 10px; /* Space from the top of the parent container */
   right: 10px; /* Space from the right edge of the screen */
   font-size: 10px;
@@ -309,6 +310,8 @@ border-left-color: rgba(255,255,255,0.8); /* Right-pointing triangle */
   .body{
       background: none;
       background-color: black;
+      background: url('../images/dark-sky.jpg') no-repeat center center fixed;
+      background-size: contain; /* Ensures the entire image fits in view */
       font-weight: 200;
   }
 
